# DA_IPAC_2024

./: .gitignore  .gitmodules  README.md  make_miniforge.sh  nohup.out  pyproject.toml  source_python.sh
external_dependencies/additional_optics/: opt_collapse_1100_1500_thin.madx  opt_collapse_flathv_900_1800_1500_thin.madx  opt_levelling_580_1500_thin.madx  opt_round_150_1500_optphases_thin.madx
studies/: config.yaml
studies/analysis/: analysis_bbb_end_of_levelling.ipynb  analysis_convergence_DA.ipynb  analysis_detuning.ipynb  analysis_functions.py  analysis_int_xing_scan_end_of_levelling.ipynb  analysis_oct_scan_end_of_collapse_flat.ipynb  analysis_oct_scan_end_of_collapse_round.ipynb  analysis_oct_scan_end_of_levelling.ipynb  analysis_oct_xing_scan_end_of_levelling_tune1.ipynb  analysis_oct_xing_scan_end_of_levelling_tune2.ipynb  analysis_tune_scan_end_of_collapse_flat.ipynb  analysis_tune_scan_end_of_collapse_flat_pos_oct.ipynb  analysis_tune_scan_end_of_collapse_flat_same_oct.ipynb  analysis_tune_scan_end_of_collapse_round.ipynb  analysis_tune_scan_end_of_collapse_round_on_disp_on.ipynb  analysis_tune_scan_end_of_collapse_round_pos_oct.ipynb  analysis_tune_scan_end_of_levelling.ipynb  analysis_tune_scan_end_of_levelling_B2.ipynb  analysis_tune_scan_end_of_levelling_HX8.ipynb  analysis_tune_scan_end_of_levelling_HX8_no_coupling.ipynb  analysis_tune_scan_end_of_levelling_higher_emit.ipynb  analysis_tune_scan_end_of_levelling_no_coupling.ipynb  analysis_tune_scan_end_of_levelling_other_scheme.ipynb  analysis_tune_scan_end_of_levelling_reprod.ipynb  (+8 more)
(+102 files in other folders)
